--- a/frontend/src/styles/layouts/login.module.css
+++ b/frontend/src/styles/layouts/login.module.css
@@ -1,8 +1,3 @@
-.titleContainer{
-    display: flex;
-    align-items: center;
-}
-
 .background{
     height: 100vh;
     position: fixed;
@@ -20,30 +15,14 @@
 
 .margin{
     display: flex;
-    flex-direction: column;
-    width: 50%;
     position: fixed;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     left: 0;
+    width: 50%;
     padding: 9rem;
     font-family: var(--poppins);
+    font-weight: 400;
     color: white;
-}
-
-.title{
-    font-size: 37pt;
-    font-family: var(--cherryMedium);
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-}
-
-.subtitle{
-    font-size: 18pt;
-    font-family: var(--poppins);
-    color: #333645;
-}
-
-.span{
-    font-family: var(--cherryMedium);
-    color: #7991C9;
-    font-weight: 500;
 }
